--- a/src/404.html
+++ b/src/404.html
@@ -13,5 +13,7 @@
                 <a href="">Log in</a>
             </nav>
         </header>
+        <h1>Seems like were not ready for that click</h1>
+        <h3>Well, let's at least play a game?</h3>
     </body>
 </html>
