--- a/src/404.html
+++ b/src/404.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="css/settings/color.css">
+        <link rel="stylesheet" href="css/elements/base.css">
+        <link rel="stylesheet" href="css/components/main-logo.css">
         <title>Clic.ly - Not found page</title>
     </head>
     <body>
         <header>
-            <h1>Clic.ly</h1>
+            <h1 class="main-logo">Clic.ly</h1>
             <nav>
                 <a href="">Home</a>
                 <a href="">Pricing</a>
@@ -14,6 +17,6 @@
             </nav>
         </header>
         <h1>Seems like were not ready for that click</h1>
-        <h3>Well, let's at least play a game?</h3>
+        <h2>Well, let's at least play a game?</h2>
     </body>
 </html>
