--- a/src/404.html
+++ b/src/404.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
     <head>
         <meta charset="utf-8">
+
+        <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="css/settings/color.css">
         <link rel="stylesheet" href="css/elements/base.css">
+        <link rel="stylesheet" href="css/containers/main-header.css">
+
+        <link rel="stylesheet" href="css/components/primary-button.css">
+        <link rel="stylesheet" href="css/components/simple-action.css">
         <link rel="stylesheet" href="css/components/main-logo.css">
+
         <title>Clic.ly - Not found page</title>
     </head>
     <body>
         <header>
             <h1 class="main-logo">Clic.ly</h1>
             <nav>
-                <a href="">Home</a>
-                <a href="">Pricing</a>
-                <a href="">About Us</a>
-                <a href="">Log in</a>
+                <a class="simple-action" href="">Home</a>
+                <a class="simple-action" href="">Pricing</a>
+                <a class="simple-action" href="">About Us</a>
+                <a class="primary-button" href="">Log In</a>
             </nav>
         </header>
         <h1>Seems like were not ready for that click</h1>
